--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -66,6 +66,16 @@
         android:textColor="@color/pressed_mega">
 		
         <Preference
+            android:key="settings_about_privacy_policy"
+        	android:title="@string/settings_about_privacy_policy"
+        	android:summary="" />
+        
+        <Preference
+            android:key="settings_about_terms_of_service"
+        	android:title="@string/settings_about_terms_of_service"
+        	android:summary="" />
+		
+        <Preference
             android:key="settings_about_sdk_version"
         	android:title="@string/settings_about_sdk_version"
         	android:summary="@string/sdk_version" />
