Updated fix for the problem managing text in the login screen

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -92,6 +92,7 @@
   </style>
     
     <style name="login_activity" parent="@style/Theme.AppCompat.Light">
+        <item name="android:windowNoTitle">true</item>
     </style>
     
     <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light">
