--- a/res/layout/fragment_inboxlist.xml
+++ b/res/layout/fragment_inboxlist.xml
@@ -10,7 +10,9 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="8dp"
-	    android:textColor="@color/black"
+	    android:paddingTop="3dp"
+	    android:paddingBottom="3dp"
+	    android:textColor="@color/white"
 	    android:background="@color/content_text_folder"
 	    android:textSize="14sp"/>
     
