--- a/res/layout/fragment_rubbishbinlist.xml
+++ b/res/layout/fragment_rubbishbinlist.xml
@@ -4,13 +4,15 @@
     android:layout_height="match_parent"
     android:background="@color/fragment_background"
     tools:context=".RubbishBinListFragment" >
-
+   
     <TextView
 	    android:id="@+id/rubbishbin_list_content_text"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="8dp"
-	    android:textColor="@color/black"
+	    android:paddingTop="3dp"
+	    android:paddingBottom="3dp"
+	    android:textColor="@color/white"
 	    android:background="@color/content_text_folder"
 	    android:textSize="14sp"/>
     
