--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -42,7 +42,7 @@
 	    android:title="@string/menu_pause_transfers"
 	    android:icon="@drawable/ic_action_bar_null"
 	    MEGA:showAsAction="never" />
-	
+	 
 	<item
 	    android:id="@+id/action_take_picture"
 	    android:orderInCategory="100"
@@ -66,6 +66,14 @@
 	    android:title="@string/action_open_link"
 		android:icon="@drawable/ic_action_bar_null"
 	    MEGA:showAsAction="never" />
+		
+<!-- <item
+	    android:id="@+id/action_from_Dropbox"
+	    android:orderInCategory="110"
+	    android:showAsAction="never"
+	    android:title="@string/action_from_Dropbox"
+		android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" /> -->	
 	
 	<item
 	    android:id="@+id/action_select"
