--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -67,13 +67,13 @@
 		android:icon="@drawable/ic_action_bar_null"
 	    MEGA:showAsAction="never" />
 		
-<!-- <item
+	 <item
 	    android:id="@+id/action_from_Dropbox"
 	    android:orderInCategory="110"
 	    android:showAsAction="never"
 	    android:title="@string/action_from_Dropbox"
 		android:icon="@drawable/ic_action_bar_null"
-	    MEGA:showAsAction="never" /> -->	
+	    MEGA:showAsAction="never" /> 
 	
 	<item
 	    android:id="@+id/action_select"
