--- a/res/layout/activity_credit_card_payment.xml
+++ b/res/layout/activity_credit_card_payment.xml
@@ -131,45 +131,48 @@
 	        android:imeOptions="actionNext"
 	        android:singleLine="true" />
         
-        <LinearLayout 
-            android:layout_width="match_parent"
+        <Spinner 
+            android:id="@+id/country_cc"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            
-            <Spinner 
-                android:id="@+id/country_cc"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1" />
-            <!-- <EditText
-		        android:id="@+id/state_cc1"
-		        android:layout_width="wrap_content"
-		        android:layout_height="fill_parent"
-		        android:hint="Adios"
-		        android:layout_gravity="center" 
-		        style="@style/InputFieldCC"
-		        android:layout_weight="1" />
-             -->
-            <EditText
-		        android:id="@+id/postal_code_cc"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:hint="@string/postal_code_cc"
-		        android:layout_gravity="center" 
-		        style="@style/InputFieldCC"
-		        android:layout_weight="1"
-		        android:imeOptions="actionNext"
-	        	android:singleLine="true" />
-            
-        </LinearLayout>
+            android:layout_gravity="center"
+            style="@style/SpinnerFieldCC"/>
+        
+        <EditText
+	        android:id="@+id/postal_code_cc"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:hint="@string/postal_code_cc"
+	        android:layout_gravity="center" 
+	        style="@style/InputFieldCC"
+	        android:imeOptions="actionNext"
+	       	android:singleLine="true" />
         
         <TextView
             android:id="@+id/payment_details_cc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/standard_margin_double" />
+        
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            
+	        <ImageView 
+	            android:id="@+id/visa_icon_cc"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="30dp"
+	            android:src="@drawable/visa_ic"/>
+	        
+	        <ImageView 
+	            android:id="@+id/mastercard_icon_cc"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="@dimen/standard_margin"
+	            android:src="@drawable/mastercard_ic"/>
+        </LinearLayout>
         
         <EditText
 	        android:id="@+id/first_name_cc"
@@ -244,7 +247,7 @@
 	    	 android:layout_width="match_parent"
 	    	 android:layout_height="wrap_content"
 	    	 android:layout_gravity="center|fill_horizontal"
-	    	 android:layout_marginTop="10dp"
+	    	 android:layout_marginTop="20dp"
 	    	 android:orientation="horizontal">
 
 	        <Button
