--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -46,6 +46,15 @@
         <item name="android:background">@drawable/edit_text_holo_light</item>
     </style>
     
+    <style name="SpinnerFieldCC">
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:layout_marginBottom">0dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    
     <style name="button_MEGA">
         <item name="android:layout_marginTop">3dp</item>
         <item name="android:layout_marginBottom">5dp</item>
